# ecto_ros

./: .gitignore  CMakeLists.txt  Makefile  ecto_opencv.rdmanifest  manifest.xml  rosdep.yaml
cmake/: CMakeLists.txt  ecto_rosConfig-version.cmake.in  ecto_rosConfig.cmake.in  gen_msg_wrappers.py  rosbuild_lite.cmake
cmake/tests/: CMakeLists.txt
doc/source/: geometry_msgs.rst  index.rst  nav_msgs.rst  sensor_msgs.rst  std_msgs.rst
ecto_ros/: CMakeLists.txt  Makefile  ecto_opencv.rdmanifest  mainpage.dox  manifest.xml  rosdep.yaml  stack.xml
ecto_ros/cmake/tests/: .gitignore
ecto_ros/include/ecto_ros/: wrap_subscriber.hpp
ecto_ros/src/: CMakeLists.txt  camera_sub.cpp  camera_sub.py  cv_bridge.cpp  ecto_ros.cpp  image_sub_envless.py
include/ecto_ros/: CMakeLists.txt  ecto_ros.hpp  wrap_bag.hpp  wrap_pub.hpp  wrap_sub.hpp
samples/: bag_read.py  bag_write.py  camera_pub.py  image_sub.py  image_sub_envless.py  sync_sub.py  usb_camera.py
scripts/: gen_msg_wrappers.py
src/: BagReader.cpp  BagWriter.cpp  CMakeLists.txt  Synchronizer.cpp  bag_read.py  bag_write.py  camera_pub.py  camera_sub.cpp  camera_sync_printer.cpp  cv_bridge.cpp  cv_camera_info.cpp  cv_pose.cpp  ecto_ros.cpp  image_sub.py  image_sub_envless.py  message_pub.cpp  message_sub.cpp  sync_sub.py  usb_camera.py
test/: CMakeLists.txt  ecto_ros_test_utils.py  test_bag.py  test_image_sub.py  test_image_sub_threadpool.py  test_reinit.py  test_reinit_threadpool.py  test_sync_sub.py
